Fixing Bloglinks icon not showing up

--- a/css/plugins/bloglinks.less
+++ b/css/plugins/bloglinks.less
@@ -35,25 +35,23 @@
             line-height: 16px;
             padding: 20px;
 
-            span {
-                .title {
-                    display: block;
-                    max-width: 90%;
+            span.title {
+                display: block;
+                max-width: 90%;
 
-                    .truncate {
-                        display: inline-block;
-                        white-space: nowrap;
-                        overflow: hidden;
-                        text-overflow: ellipsis;
-                    }
-                }
-
-                .icon {
+                .truncate {
                     display: inline-block;
-                    font-family: 'bootstrap-icons';
-                    font-size: 30px;
-                    vertical-align: middle;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
+            }
+
+            span.icon {
+                display: inline-block;
+                font-family: 'bootstrap-icons';
+                font-size: 30px;
+                vertical-align: middle;
             }
         }
         a.wikilink1:hover {
